# zenlings

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  info.toml  install.sh  pyproject.toml
.github/workflows/: release.yml  test-solutions.yml
exercises/00_intro/: intro1.py  intro2.py
exercises/01_loading/: load1.py  load2.py  load3.py  load4.py
exercises/02_map/: map1.py  map2.py  map3.py  map4.py  map5.py
exercises/03_product/: product1.py  product2.py  product3.py
exercises/04_advanced/: advanced1.py  advanced2.py  advanced3.py  advanced4.py
exercises/05_async/: async1.py  async2.py  async3.py  async4.py
exercises/06_config/: config1.py  config2.py
exercises/07_quizzes/: capstone.py  quiz1.py
solutions/00_intro/: intro1.py  intro2.py
solutions/01_loading/: load1.py  load2.py  load3.py  load4.py
solutions/02_map/: map1.py  map2.py  map3.py  map4.py  map5.py
solutions/03_product/: product1.py  product2.py  product3.py
solutions/04_advanced/: advanced1.py  advanced2.py  advanced3.py  advanced4.py
solutions/05_async/: async1.py  async2.py  async3.py  async4.py
solutions/06_config/: config1.py  config2.py
solutions/07_quizzes/: capstone.py  quiz1.py
src/: app_state.rs  exercise.rs  hints.rs  main.rs  term.rs  verify.rs  watch.rs
tests/: __init__.py  conftest.py  helpers.py  test_solutions.py
