[package]
name = "zenlings"
version = "0.1.0"
edition = "2021"
description = "Interactive exercises for learning ZenML dynamic pipelines"
authors = ["ZenML GmbH <info@zenml.io>"]
license = "Apache-2.0"
repository = "https://github.com/zenml-io/zenlings"
keywords = ["zenml", "mlops", "learning", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.27"
notify = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.10"

[profile.release]
lto = true
codegen-units = 1
strip = true
